--- a/local/templates/school_eng/css/main.css
+++ b/local/templates/school_eng/css/main.css
@@ -1114,7 +1114,7 @@ body {
 
 .chat-people,
 .chat-messages {
-    height: 600px;
+    height: 400px;
     overflow-y: scroll;
 }
 
@@ -1126,7 +1126,7 @@ body {
 }
 
 .chat-people ul {
-    margin: -10px;
+    /*margin: -10px;*/
     padding: 0;
     list-style: none;
 }
